--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <p>hello world</p>
+  <h1>Hello World!</h1>
   <script src="bundle.js"></script>
 </body>
 </html>
